# propositional-equality

./: LICENSE  README.md  propositional-equality.cabal
.circleci/: config.yml
src/: Function.hs  Misc.hs  ProofCombinators.hs
src/Relation/Equality/: Prop.hs
test/: Endofunctors.hs  Folds.hs  Inconsistency.hs  Map.hs  Readers.hs  RefinedDomains.hs  Reverse.hs
